# playstore-review-chatbot

./: .gitignore  Makefile  README.md  chain.py  helper.py  ingest.py  main.py  pyproject.toml  sampler.py
faiss_index/: index.faiss  index.pkl
