[tool.poetry]
name = "playstore-review-chatbot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.1.4"
langchain-community = "^0.0.16"
langchain-experimental = "^0.0.49"
faiss-cpu = "^1.7.4"
streamlit = "^1.30.0"


[tool.poetry.group.dev.dependencies]
black = "^24.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
