[tool.poetry]
name = "playstore-review-chatbot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.1.4"
langchain-community = "^0.0.16"
langchain-experimental = "^0.0.49"
faiss-cpu = "^1.7.4"
streamlit = "^1.30.0"
langchain-openai = "^0.0.5"


[tool.poetry.group.dev.dependencies]
black = "^24.1.1"
tabulate = "^0.9.0"
tiktoken = "^0.5.2"
ipython = "^8.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
